# shark

./: .gitignore  Cargo.toml  README.md  a.out  main.c  output  test.shark  token_test.shark
.github/: FUNDING.yml
src/: buffered_content.rs  main.rs  string.rs  term_color.rs
src/ast/: mod.rs  parser.rs  pat.rs  type_expr.rs
src/ast/parser/: mod.rs  pat_parser.rs  type_parser.rs
src/cfront/: mod.rs  scan.rs
src/checks/: mod.rs  symboltable.rs  syntaxchecker.rs
src/error/: location.rs  mod.rs
src/errors/: location.rs
src/mir/: builder.rs  mod.rs  translator.rs  typecheck.rs
src/token/: iterstack.rs  mod.rs  tokenizer.rs
test/: common.h  test  test.c  test.shark
